# odin

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-build.sh  docker-test.sh  pyproject.toml  remote-run-in-docker.sh  requirements.txt  run-in-docker.sh  setup.py  streamlit.sh
.github/workflows/: docker-image.yml  docker-test.yml
etc/: odin-analysis  odin-analysis.service  odin-analysis.timer
odin/: cli.py  elastic_search.py  groups.py  types.py
odin/analyze/: main.py
odin/collect/: airtable_records.py  cli.py  credentials.py  elastic_search.py  hootsuite_api.py  main.py  munging.py  postgres.py  pulse_api.py
odin/credentials/: config.py
odin/data/: daily_counts.csv  limits.json  name_labels.csv
odin/query/: keyword_query_template.json
odin/streamlit/: main.py
odin/utils/: airtable.py  cli.py  munging.py  projects.py  time.py
odin/utils/google/: get_metrics.py
odin/vis/: google_analytics.py
tests/: conftest.py  fixture.py  test_cli.py  test_main_cli.py
tests/collect/: test-postgres.sh  test_collect_cli.py  test_elastic_search.py  test_main.py  test_munging.py  test_postgres.py  test_pulse_api.py
tests/credentials/: test_config.py
tests/data/: domain_kw.txt  google_analytics_activity.csv  test_name_labels.csv  test_names_2022-05-31 21:03:45+00:00_2022-05-31 22:56:20+00:00.csv
tests/query/: test_elasticsearch_query.json  test_hafiz_saeed_body.json  test_rfj_alerting.json  test_rfj_alerting_twitter.json  test_ro_name_body.json
tests/scripts/: test_contacts_count.py
tests/utils/: test_airtable.py  test_munging.py  test_projects.py  test_projects_cli.py
tests/vis/: test_google_analytics.py
(+23 files in other folders)
