[build-system]
requires = ["setuptools>=64.0.0", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "odin"
dynamic = ["version"]
description = "Odin analytics cli tools"
readme = "README.md"
authors = [{ name = "Gabe McBride", email = "gabriel.mcbride@twosixtech.com" }]

[tool.setuptools.packages.find]
exclude = ["etc", "scripts"]

[project.scripts]
odin = "odin.cli:run"